syntax = "proto3"; 
package pb; 
import "google/protobuf/timestamp.proto"; 
option go_package="sgithub.com/techschool/simplebank/pb"; 
message Mail { 
  int64 id = 1; 
  string email = 2; 
  bool is_used = 3; 
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp expired_at = 5;
}
