syntax = "proto3"; 
package pb; 
import "user.proto"; 
import "google/protobuf/timestamp.proto"; 
option go_package = "sgithub.com/techschool/simplebank/pb";
message LoginRequest { 
  string username = 1; 
  string password = 2;
}
message LoginResponse { 
  string session_id = 1; 
  string access_token = 2; 
  User user_info = 3 ; 
  google.protobuf.Timestamp access_token_expired_at = 4; 
	string refresh_token = 5; 
	google.protobuf.Timestamp refresh_token_expired_at = 6;
}
 